<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.ui.reminders.reminders_edit.ReminderEditFragment">

            <EditText
                android:id="@+id/et_reminder_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/reminder_title_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="@dimen/touch_target_min_height"
                android:text="@={currentReminder.title}"
                app:layout_constraintBottom_toTopOf="@+id/tv_description_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title_label"
                app:layout_constraintTop_toBottomOf="@id/tv_title_label"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/et_reminder_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/reminder_description_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/touch_target_min_height"
                android:text="@={currentReminder.description}"
                app:layout_constraintBottom_toTopOf="@+id/tv_reminder_mapview_label"
                app:layout_constraintEnd_toEndOf="@+id/et_reminder_title"
                app:layout_constraintStart_toStartOf="@+id/tv_title_label"
                app:layout_constraintTop_toBottomOf="@id/tv_description_label" />

            <TextView
                android:id="@+id/tv_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/tv_description_label"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_reminder_description"
                app:layout_constraintStart_toStartOf="@+id/tv_title_label"
                app:layout_constraintTop_toBottomOf="@id/et_reminder_title" />

            <TextView
                android:id="@+id/tv_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/tv_title_label"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_reminder_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_reminder_mapview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/tv_mapview_label"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/mv_reminder_location_map"
                app:layout_constraintStart_toStartOf="@+id/tv_title_label"
                app:layout_constraintTop_toBottomOf="@id/et_reminder_description" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mv_reminder_location_map"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_reminder_mapview_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/fab_save"
            android:src="@drawable/ic_baseline_save_24"
            app:layout_anchor="@id/bottom_sheet"
            app:layout_anchorGravity="top|end" />

        <include
            android:id="@+id/bottom_sheet"
            layout="@layout/bottom_sheet_location_persistent" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <data>

        <variable
            name="currentReminder"
            type="com.udacity.project4.domain.model.Reminder" />
    </data>
</layout>