...
    <string name="location_denied">Location access is required to trigger geofences. Please enable it in the app Settings.</string>
    <string name="location_dialog_title">Background Location Required</string>
    <string name="location_rationale">Background location permissions are needed to trigger notifications upon entering a geofence. Please check the \"Allow all the time\" option on the Settings page.</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="fetching_location">Fetching current location data.</string>
    <string name="no_value" />
    <string name="no_transition_type">Please select a transition type</string>
    <string name="no_latlng">Please select a location on the map for your geofence</string>
    <string name="missing_data">Please fill out all fields before submitting reminder</string>
    <string name="header_add_request">Add Geofence Request</string>
    <string name="header_edit_request">Edit Geofence Request</string>
    <string name="action_ok">OK</string>
    <string name="tv_title_label">Reminder Title</string>
    <string name="tv_description_label">Reminder Description</string>
...
